--- a/.github/workflows/hello.yml
+++ b/.github/workflows/hello.yml
@@ -12,3 +12,10 @@ jobs:
     steps:
     - name: Say Hello World
       run: echo "Hello World!"
+
+    - name: Print date
+      run: date
+
+    - name: Print directory Contents
+      run: ls -l
+    
